<resources>
    <string name="app_name">chowNow</string>

    <!--welcome page-->
    <string name="title_welcome_page">Selamat Datang di ChowNow!</string>
    <string name="subtitle1_welcome_page">Siap untuk memesan makanan terdekat darimu?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_underline"><u>Daftar</u></string>

    <!--login register page-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_daftar">Belum punya akun? <u>Daftar</u></string>
    <string name="to_masuk">Sudah punya akun? <u>Masuk</u></string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_warning">Password minimal 8 karakter</string>
    <string name="confirm_password_warning">Konfirmasi password tidak cocok</string>


    <!-- dashboard -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dashboard">Dashboard</string>

    <string name="home">Home</string>
    <string name="resto">Resto</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <string name="headline_dashboard">Laper? \nYuk cari santapan terdekat!</string>
    <string name="lokasi_saat_ini">Lokasi saat ini:</string>
    <string name="lokasi_aktif">Lokasi aktif</string>
    <string name="detail_lokasi">Jl. Sukamaju, Kelurahan Pantang Mundur, Jakarta Pusat</string>
    <string name="status_pesanan_kamu">Status Pesanan Kamu</string>
    <string name="rekomendasi_untuk_kamu">Rekomendasi untuk Kamu</string>
    <string name="lihat_lebih"><u>Lihat lebih</u></string>

    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="date_confirm_order">Selasa, 8 Mei 2024 09:30</string>
    <string name="ubah_pesanan"><u>Ubah Pesanan</u></string>
    <string name="back_button">Back Button</string>
    <string name="location_icon">Location Icon</string>
    <string name="restaurant_image">Image Resto</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <string name="image_resto">Image Resto</string>

    <!--detail resto-->
    <string name="nama_restoran">Nama Restoran</string>
    <string name="rating">5.0/5.0</string>
    <string name="distance">2.3 km</string>
    <string name="didirikan">Didirikan oleh:</string>
    <string name="jenis">Jenis Kuliner:</string>
    <string name="sejak">Didirikan sejak:</string>
    <string name="dijual">Jumlah menu:</string>
    <string name="keterangan">Keterangan</string>
    <string name="item_count">1 item</string>
    <string name="harga">100.000</string>

    <!--status pesanan-->
    <string name="status_pesanan">Status Pesanan</string>
    <string name="tanggal">Selasa, 8 Mei 2024</string>
    <string name="jam">09.30</string>
    <string name="estimasi_waktu">Estimasi Waktu</string>
    <string name="nomor_pesanan">Nomor Pesanan</string>
    <string name="menit">menit</string>
    <string name="estimasi_detail">7m</string>
    <string name="nomor_detail"># 123</string>
    <string name="total">Total: Rp23.000</string>

    <string name="status1">Pesanan Anda sudah selesai</string>
    <string name="status1_detail">Detail Status 1</string>
    <string name="status2">Pesanan sedang disiapkan</string>
    <string name="status2_detail">Detail Status 2</string>
    <string name="status3">Pesanan Anda sudah diterima</string>
    <string name="status3_detail">Detail Status 3</string>
    <string name="status4">Pesanan sedang diproses</string>
    <string name="status4_detail">Detail Status 4</string>

    <string name="distance_format">%d meter</string>

    <string name="distance_format_km_info">%.2f km dari Anda</string>
    <string name="price_format">Rp. %s</string>
    <string name="time_format">%d menit</string>

    <string name="rating_scale">%.1f/5.0</string>
    <string name="tv_nama_restoran">Nama Restoran</string>
    <string name="tab_text_1">Menu</string>
    <string name="tab_text_2">Review</string>
    <string name="tab_text_3">About</string>

    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="logout"><u>Keluar</u></string>


</resources>