<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.chownow.ui.dashboard.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_homeFragment_to_restoFragment"
            app:destination="@id/navigation_resto" />

    </fragment>

    <fragment
        android:id="@+id/navigation_resto"
        android:name="com.dicoding.chownow.ui.dashboard.resto.RestoFragment"
        android:label="@string/resto"
        tools:layout="@layout/fragment_resto" >

        <action
            android:id="@+id/action_restoFragment_to_homeFragment"
            app:destination="@id/navigation_home" />

    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.dicoding.chownow.ui.dashboard.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dicoding.chownow.ui.dashboard.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.chownow.ui.dashboard.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>