<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.dashboard.resto.detail.DetailAboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_orange_sec_bg"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:id="@+id/text_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline">

            <TextView
                android:id="@+id/tv_pendiri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/didirikan" />

            <TextView
                android:id="@+id/tv_pendiri_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/keterangan" />

            <TextView
                android:id="@+id/tv_jenis_kuliner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="16dp"
                android:text="@string/jenis" />

            <TextView
                android:id="@+id/tv_jenis_kuliner_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/keterangan" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/tv_waktu_didirikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sejak" />

            <TextView
                android:id="@+id/tv_waktu_didirikan_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/keterangan" />

            <TextView
                android:id="@+id/tv_quantity_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="16dp"
                android:text="@string/dijual" />

            <TextView
                android:id="@+id/tv_quantity_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/keterangan" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>